Fixed overflow for coding london page

--- a/public/compass/sass/codingldn.scss
+++ b/public/compass/sass/codingldn.scss
@@ -9,8 +9,6 @@ body {
 	background-color: #1e4157;
 	color: $white;
 	font-family: 'Lato', sans-serif;
-	height: 100vh;
-	overflow: hidden;
 }
 
 .content {
